--- a/simple-coin-cap/simple-coin-cap/package.json
+++ b/simple-coin-cap/simple-coin-cap/package.json
@@ -13,6 +13,7 @@
     "semantic-ui-css": "^2.3.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
