--- a/simple-coin-cap/simple-coin-cap/package.json
+++ b/simple-coin-cap/simple-coin-cap/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    // start only for production
+    "start": "node server.js",
     "start-dev": "concurrently \"node server.js\" \"npm run serve\"",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build"
